[package]
name = "es6"
version = "0.1.0"
authors = ["ibaryshnikov <baryshnikov.il@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"

[dependencies.web-sys]
version = "=0.3.38"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

